Fixing spacing issues on heroku deployment

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -83,7 +83,7 @@ form .form-control {
 
 #mc_embed_signup {
   font-size: .75em;
-  width: 80%;
+  width: 100%;
 }
 
 #mc_embed_signup input[type="email"] {
